# MiotCL

./: CMakeLists.txt  License.txt  README.md  bigtobig.cpp  bngen.cpp  ecgen.cpp
c/: CMakeLists.txt  DLLDefines.h  aes.c  big.c  build_ec  build_ec.bat  build_pair  build_pair.bat  build_pair_ms.bat  ecdh.c  ecdh.h  ecp.c  ecp2.c  ff.c  fp.c  fp12.c  fp2.c  fp4.c  gcm.c  hash.c  maxstack.c  miotcl.h.in  miotcl_.h  mpin.c  mpin.h  oct.c  pair.c  rand.c  readme.txt  rom.c  rsa.c  rsa.h  testecdh.c  testecm.c  testmpin.c  testrsa.c  utils.c  utils.h  version.c  version.h
c/tests/: CMakeLists.txt  test_ecdh.c  test_ecm.c  test_gcm.c  test_mpin.c  test_mpin_bad_pin.c  test_mpin_bad_token.c  test_mpin_expired_tp.c  test_mpin_good.c  test_mpin_random.c  test_mpin_tp.c  test_mpinfull.c  test_mpinfull_random.c  test_rsa.c  test_version.c
docs/: CMakeLists.txt  Doxyfile.in  MiotCL.dox  README.txt
java/: AES.java  BIG.java  DBIG.java  ECDH.java  ECP.java  ECP2.java  FF.java  FP.java  FP12.java  FP2.java  FP4.java  GCM.java  MPIN.java  PAIR.java  RAND.java  ROM.java  RSA.java  TestECM.java  TestMPIN.java  TestRSA.java  readme.txt
java64/: AES.java  BIG.java  DBIG.java  ECDH.java  ECP.java  ECP2.java  FF.java  FP.java  FP12.java  FP2.java  FP4.java  GCM.java  HASH.java  MPIN.java  PAIR.java  ROM.java  RSA.java  TestECDH.java  TestMPIN.java  TestRSA.java  readme.txt
js/: AES.js  BIG.js  DBIG.js  ECDH.js  ECP.js  ECP2.js  FF.js  FP.js  FP12.js  FP2.js  FP4.js  GCM.js  HASH.js  MPIN.js  MPINAuth.js  PAIR.js  RAND.js  ROM.js  RSA.js  TestMPIN.html  readme.txt
js/tests/: MPIN.js  README.txt  TestMPIN.js  TestMPINAuth.js  config.js  find_duplicates.py  genVectors.py  run_js_tests.sh  test_add_shares.js  test_pass1.js  test_pass2.js  test_randomX.js  test_sha256.js  test_token.js
pythonCFFI/: CMakeLists.txt  README.md  TestMPIN.py  TestMPINBNCX.py  TestMPINInstall.py  TimeMPIN.py  TimeMPINFull.py  mpin.py
swift/: TestECDH.swift  TestECM.swift  TestMPIN.swift  TestRSA.swift  aes.swift  big.swift  dbig.swift  ecdh.swift  ecp.swift  ecp2.swift  ff.swift  fp.swift  fp12.swift  fp2.swift  fp4.swift  gcm.swift  hash.swift  main.swift  mpin.swift  pair.swift  rand.swift  readme.txt  rom.swift  rsa.swift
